support_tools/swigwin-3.0.12/Examples/test-suite/errors/c_bad_native.i
%module xxx

%native(foo) int foo;


